# Federal-Learning

./: $output_file  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.6nodes.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.claude/: launch.json
configs/: README.md  base.yaml  centralized_synthetic.yaml  exp01_fedavg_resnet50_5nodes_server.yaml  exp01_fedavg_resnet50_6nodes_server.yaml  exp01_fedavg_resnet50_client.yaml  exp01_fedavg_resnet50_server.yaml  exp04_fedyogi_resnet50_client.yaml  exp04_fedyogi_resnet50_server.yaml  exp05_fedadam_resnet50_client.yaml  exp05_fedadam_resnet50_server.yaml  exp06_fedprox_resnet50_client.yaml  exp06_fedprox_resnet50_server.yaml  exp07_fedavg_resnet50_server.yaml  exp07_pretrain_ddsm_centralized.yaml  exp08_centralized_resnet50.yaml  fedavg_cbis_ddsm.yaml  fedavg_mammobench_client.yaml  fedavg_mammobench_server.yaml  fedavg_mammobench_server_no_holdout.yaml  fedavg_server_training.yaml  fedavg_synthetic.yaml  radimagenet_densenet121_fedavg.yaml  radimagenet_resnet50_centralized.yaml  radimagenet_resnet50_fedavg.yaml  radimagenet_resnet50_grpc_client.yaml  radimagenet_resnet50_grpc_client_v2.yaml  radimagenet_resnet50_grpc_server.yaml  radimagenet_resnet50_grpc_server_no_holdout.yaml  radimagenet_resnet50_grpc_server_v2.yaml  reference.yaml  test_synthetic_client.yaml  test_synthetic_server.yaml
docs/: CHECKPOINT_COMPATIBILITY.md  DATA_PREPARATION.md  DOCKER.md  EXPERIMENT_AUDIT.md  EXTENDING.md  FEDERATED_DEPLOYMENT_GUIDE.md  METHODOLOGY.md  NODE_CONFIGURATION_MATRIX.md  QUICK_START_6NODES.md  RADIMAGENET_IMPLEMENTATION.md  SETUP_6NODES.md  TRANSFER_LEARNING_GUIDE.md  audit-plan.md
manifests/: node0_manifest.csv  node1_manifest.csv  partition_summary.txt  server_test_manifest.csv
scripts/: docker-deploy-federated.sh  eval-exp20-22-final.sh  eval-exp20-22.sh  eval-exp24-26-final.sh  eval-exp28-31-final.sh  eval-exp32-49.sh  eval-experiments.sh  gen_federated_grid.py  partition_mammobench.py  plot_experiment.py  run-deadline-shorts.sh  run-eval-queue.sh  run-exp20-22.sh  run-exp21-22.sh  run-exp24-26.sh  run-exp28-31.sh  run-exp32-49-parallel.sh  run-exp32-49.sh  run-queue.sh  run_all_experiments_node.sh  run_all_experiments_server.sh  run_client.py  (+15 more)
(+411 files in other folders)
