[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedmammobench"
version = "0.3.0"
description = "Federated learning for binary mammography classification (benign vs malignant)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Julian Ojeda Aviles", email = "julianojeda11229077@correo.itm.edu.co" }
]
keywords = ["federated-learning", "flower", "pytorch", "medical-imaging", "mammography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime deps are pinned in requirements.txt to keep CUDA / wheel selection
# flexible. pyproject.toml lists only the loose constraints used by `pip install -e .`.
dependencies = [
    "torch>=2.1,<3.0",
    "torchvision>=0.16,<1.0",
    "flwr[simulation]>=1.7,<2.0",
    "numpy>=1.26,<3.0",
    "pandas>=2.1,<3.0",
    "scikit-learn>=1.3,<2.0",
    "Pillow>=10.0,<12.0",
    "albumentations>=1.4,<2.0",
    "opencv-python-headless>=4.9,<5.0",
    "pydicom>=2.4,<4.0",
    "PyYAML>=6.0,<7.0",
    "tensorboard>=2.15,<3.0",
    "tqdm>=4.66,<5.0",
    "ray[default]>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "black>=24.0",
]

[project.scripts]
fedmammobench-centralized = "fedmammobench.cli.centralized:main"
fedmammobench-federated = "fedmammobench.cli.federated:main"
fedmammobench-evaluate = "fedmammobench.cli.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fedmammobench*"]

[tool.setuptools.package-data]
fedmammobench = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
